added folders and sort files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>Hello!!!</p>
-    <script src="firstHomeTask.js"></script>
+    <script src="script-notes.js"></script>
   </body>
 </html>
