--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>Hello!!!</p>
-    <script src="script-notes.js"></script>
+    <script src="homeTasks/cycleAndLogical_task.js"></script>
   </body>
 </html>
