--- a/js_landingPractise/index.html
+++ b/js_landingPractise/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header__left-block">
             <div class="header__logo">
-                <img src="icons/logo.svg" alt="Логотип">
+                <img src="images/logo.svg" alt="Логотип">
             </div>
             <nav class="header__links">
                 <a href="#" class="header__link">Доставка питания</a>
@@ -25,10 +25,10 @@
         <div class="sidepanel__text"><span>Социальные сети</span></div>
         <div class="sidepanel__divider"></div>
         <a href="#" class="sidepanel__icon">
-            <img src="icons/instagram.svg" alt="instagram">
+            <img src="images/instagram.svg" alt="instagram">
         </a>
         <a href="#" class="sidepanel__icon">
-            <img src="icons/facebook.svg" alt="facebook">
+            <img src="images/facebook.svg" alt="facebook">
         </a>
     </div>
 
@@ -103,28 +103,30 @@
             <div class="offer__slider">
                 <div class="offer__slider-counter">
                     <div class="offer__slider-prev">
-                        <img src="icons/left.svg" alt="prev">
+                        <img src="images/left.svg" alt="prev">
                     </div>
                     <span id="current">03</span>
                     /
                     <span id="total">04</span>
                     <div class="offer__slider-next">
-                        <img src="icons/right.svg" alt="next">
+                        <img src="images/right.svg" alt="next">
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
-                    <div class="offer__slide">
-                        <img src="img/slider/pepper.jpg" alt="pepper">
+                    <div class="offer__slider-inner">
+                        <div class="offer__slide">
+                            <img src="img/slider/pepper.jpg" alt="pepper">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/food-12.jpg" alt="food">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/paprika.jpg" alt="paprika">
+                        </div>
                     </div>
-                    <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -196,7 +198,7 @@
             <form action="#" class="order__form">
                 <input required placeholder="Ваше имя" name="name" type="text" class="order__input">
                 <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
-                <img src="icons/right.svg" alt="right">
+                <img src="images/right.svg" alt="right">
                 <button class="btn btn_dark btn_min">Перезвонить мне</button>
             </form>
         </div>
@@ -248,7 +250,7 @@
                 <a href="#" class="link">facebook</a>
             </div>
             <div class="pepper">
-                <img src="icons/veg.svg" alt="pepper">
+                <img src="images/veg.svg" alt="pepper">
             </div>
             <div class="call">
                 <div class="subtitle">Или позвоните нам</div>
@@ -271,7 +273,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="js/script.js"></script>
 </body>
